--- a/Mona/apps/baygui/ghebtn/Makefile
+++ b/Mona/apps/baygui/ghebtn/Makefile
@@ -1,7 +1,7 @@
 TARGET  = GHEBTN
 SOURCES = ghebtn.cpp 
 INSTDIR = $(BINDIR)/root/APPS/GHEBTN.APP
-INSTFILES = 0.BM2 1.BM2 2.BM2 3.BM2 4.BM2 5.BM2 6.BM2 7.BM2 8.BM2 9.BM2 HENORMAL.BM2 HEPUSHED.BM2
+INSTFILES = 0.BM5 1.BM5 2.BM5 3.BM5 4.BM5 5.BM5 6.BM5 7.BM5 8.BM5 9.BM5 HENORMAL.BM5 HEPUSHED.BM5
 
 $(TARGET).EX5: $(INSTFILES)
 
@@ -18,40 +18,40 @@ endif
 
 CXXFLAGS += -DDEBUG
 
-0.BM2: 0.bmp
-	bzip2 -c $< > $@
+0.BM5: 0.bmp
+	$(MONADIR)/bin/bim2bin in:$< out:$@ -osacmp -tek5 BS:0 eprm:z0
 
-1.BM2: 1.bmp
-	bzip2 -c $< > $@
+1.BM5: 1.bmp
+	$(MONADIR)/bin/bim2bin in:$< out:$@ -osacmp -tek5 BS:0 eprm:z0
 
-2.BM2: 2.bmp
-	bzip2 -c $< > $@
+2.BM5: 2.bmp
+	$(MONADIR)/bin/bim2bin in:$< out:$@ -osacmp -tek5 BS:0 eprm:z0
 
-3.BM2: 3.bmp
-	bzip2 -c $< > $@
+3.BM5: 3.bmp
+	$(MONADIR)/bin/bim2bin in:$< out:$@ -osacmp -tek5 BS:0 eprm:z0
 
-4.BM2: 4.bmp
-	bzip2 -c $< > $@
+4.BM5: 4.bmp
+	$(MONADIR)/bin/bim2bin in:$< out:$@ -osacmp -tek5 BS:0 eprm:z0
 
-5.BM2: 5.bmp
-	bzip2 -c $< > $@
+5.BM5: 5.bmp
+	$(MONADIR)/bin/bim2bin in:$< out:$@ -osacmp -tek5 BS:0 eprm:z0
 
-6.BM2: 6.bmp
-	bzip2 -c $< > $@
+6.BM5: 6.bmp
+	$(MONADIR)/bin/bim2bin in:$< out:$@ -osacmp -tek5 BS:0 eprm:z0
 
-7.BM2: 7.bmp
-	bzip2 -c $< > $@
+7.BM5: 7.bmp
+	$(MONADIR)/bin/bim2bin in:$< out:$@ -osacmp -tek5 BS:0 eprm:z0
 
-8.BM2: 8.bmp
-	bzip2 -c $< > $@
+8.BM5: 8.bmp
+	$(MONADIR)/bin/bim2bin in:$< out:$@ -osacmp -tek5 BS:0 eprm:z0
 
-9.BM2: 9.bmp
-	bzip2 -c $< > $@
+9.BM5: 9.bmp
+	$(MONADIR)/bin/bim2bin in:$< out:$@ -osacmp -tek5 BS:0 eprm:z0
 
-HENORMAL.BM2: henormal.bmp
-	bzip2 -c $< > $@
+HENORMAL.BM5: henormal.bmp
+	$(MONADIR)/bin/bim2bin in:$< out:$@ -osacmp -tek5 BS:0 eprm:z0
 
-HEPUSHED.BM2: hepushed.bmp
-	bzip2 -c $< > $@
+HEPUSHED.BM5: hepushed.bmp
+	$(MONADIR)/bin/bim2bin in:$< out:$@ -osacmp -tek5 BS:0 eprm:z0
 
 include dependencies
