--- a/Mona/src/servers/baygui/Makefile
+++ b/Mona/src/servers/baygui/Makefile
@@ -1,8 +1,10 @@
 TARGET  = BAYGUI
 SOURCES = WindowManager.cpp
 INSTDIR = $(BINDIR)/root/SERVERS
-INSTFILES  = MONAWALL.BM2
-CLEANFILES = 
+INSTFILES  = MONAWALL.BM5
+CLEANFILES = MONAWALL.BM5
+
+$(TARGET).EX5: $(INSTFILES)
 
 MONADIR    = ../../..
 ifneq ($(BUILD_TARGET),ELF)
@@ -16,5 +18,8 @@ include $(MONADIR)/env/monapi-el5.inc
 endif
 
 CXXFLAGS += -DDEBUG
+
+MONAWALL.BM5: MONAWALL.BMP
+	$(MONADIR)/bin/bim2bin in:$< out:$@ -osacmp -tek5 BS:0 eprm:z0
 
 include dependencies
