--- a/Mona/tools/bim2bin/Makefile
+++ b/Mona/tools/bim2bin/Makefile
@@ -4,6 +4,9 @@ SOURCES = bim2bin.c
 MONADIR = ../..
 include $(MONADIR)/env/Makefile.inc
 CXXFLAGS = -Wall -g
+CC = gcc
+STRIP = strip
+RM = -rm
 INCLUDE  = -idirafter .
 
 OBJECTS = $(SOURCES:.cpp =.o)
@@ -12,7 +15,7 @@ all : $(TARGET)
 
 $(TARGET): $(OBJECTS)
 	$(CC) $(OBJECTS) -o $(TARGET)
-	strip $(TARGET)
+	$(STRIP) $(TARGET)
 
 .SUFFIXES: .c .o
 .c.o:
@@ -22,6 +25,6 @@ depend:
 	$(CC) -MM $(INCLUDE) $(CXXFLAGS) $(SOURCES) > dependencies
 
 clean :
-	rm -f bim2bin.o $(TARGET)
+	$(RM) -f bim2bin.o $(TARGET)
 
 include dependencies
