--- a/Mona/tools/t5lzma/7zip/Compress/LZMA_Alone/Makefile
+++ b/Mona/tools/t5lzma/7zip/Compress/LZMA_Alone/Makefile
@@ -3,7 +3,7 @@ PROG=t5lzma$(EXEEXT)
 include ../../../../../env/Makefile.inc
 
 # MSYS for Win32 ‚Å‚Í 1 ‚É‚·‚é
-#isMinGW32 = 1
+isMinGW32 = 
 
 LIB = -lm
 RM = rm -f
