--- a/Mona/apps/baygui/Makefile
+++ b/Mona/apps/baygui/Makefile
@@ -4,6 +4,7 @@ all:
 	@cd gclock && $(MAKE) $@
 	@cd glaunch && $(MAKE) $@
 	@cd ghebtn && $(MAKE) $@
+	@cd gnoiz2bg && $(MAKE) $@
 	@cd grunner && $(MAKE) $@
 	@cd guitest1 && $(MAKE) $@
 	@cd gversion && $(MAKE) $@
@@ -14,6 +15,7 @@ install:
 	@cd gclock && $(MAKE) $@
 	@cd glaunch && $(MAKE) $@
 	@cd ghebtn && $(MAKE) $@
+	@cd gnoiz2bg && $(MAKE) $@
 	@cd grunner && $(MAKE) $@
 	@cd guitest1 && $(MAKE) $@
 	@cd gversion && $(MAKE) $@
@@ -24,6 +26,7 @@ clean: touchdepend
 	@cd gclock && $(MAKE) $@
 	@cd glaunch && $(MAKE) $@
 	@cd ghebtn && $(MAKE) $@
+	@cd gnoiz2bg && $(MAKE) $@
 	@cd grunner && $(MAKE) $@
 	@cd guitest1 && $(MAKE) $@
 	@cd gversion && $(MAKE) $@
@@ -34,6 +37,7 @@ depend: touchdepend
 	@cd gclock && $(MAKE) $@
 	@cd glaunch && $(MAKE) $@
 	@cd ghebtn && $(MAKE) $@
+	@cd gnoiz2bg && $(MAKE) $@
 	@cd grunner && $(MAKE) $@
 	@cd guitest1 && $(MAKE) $@
 	@cd gversion && $(MAKE) $@
@@ -44,6 +48,7 @@ distclean:
 	rm -f gclock/dependencies
 	rm -f glaunch/dependencies
 	rm -f ghebtn/dependencies
+	rm -f gnoiz2bg/dependencies
 	rm -f grunner/dependencies
 	rm -f guitest1/dependencies
 	rm -f gversion/dependencies
@@ -54,6 +59,7 @@ touchdepend:
 	touch gclock/dependencies
 	touch glaunch/dependencies
 	touch ghebtn/dependencies
+	touch gnoiz2bg/dependencies
 	touch grunner/dependencies
 	touch guitest1/dependencies
 	touch gversion/dependencies
