--- a/Mona/bin/root/SERVERS/.cvsignore
+++ b/Mona/bin/root/SERVERS/.cvsignore
@@ -1,16 +1,17 @@
 *.o
 *.bin
 *.list
-*.img
-*.exe
+*.map
+*.local
 *.BIN
 *.BN2
+*.BM2
 *.ELF
 *.EL2
 *.EXE
 *.EX2
-*.LIB
-*.WRP
-*.APP
+*.EX5
 *.MSH
+*.APP
 TAGS
+dependencies
