--- a/Mona/apps/baygui/Makefile
+++ b/Mona/apps/baygui/Makefile
@@ -1,6 +1,7 @@
 all:
 	@cd gbball && $(MAKE) $@
 	@cd gbrowser && $(MAKE) $@
+	@cd gchat && $(MAKE) $@
 	@cd gclock && $(MAKE) $@
 	@cd glaunch && $(MAKE) $@
 	@cd ghebtn && $(MAKE) $@
@@ -12,6 +13,7 @@ all:
 install:
 	@cd gbball && $(MAKE) $@
 	@cd gbrowser && $(MAKE) $@
+	@cd gchat && $(MAKE) $@
 	@cd gclock && $(MAKE) $@
 	@cd glaunch && $(MAKE) $@
 	@cd ghebtn && $(MAKE) $@
@@ -23,6 +25,7 @@ install:
 clean: touchdepend
 	@cd gbball && $(MAKE) $@
 	@cd gbrowser && $(MAKE) $@
+	@cd gchat && $(MAKE) $@
 	@cd gclock && $(MAKE) $@
 	@cd glaunch && $(MAKE) $@
 	@cd ghebtn && $(MAKE) $@
@@ -34,6 +37,7 @@ clean: touchdepend
 depend: touchdepend
 	@cd gbball && $(MAKE) $@
 	@cd gbrowser && $(MAKE) $@
+	@cd gchat && $(MAKE) $@
 	@cd gclock && $(MAKE) $@
 	@cd glaunch && $(MAKE) $@
 	@cd ghebtn && $(MAKE) $@
@@ -45,6 +49,7 @@ depend: touchdepend
 distclean:
 	rm -f gbball/dependencies
 	rm -f gbrowser/dependencies
+	rm -f gchat/dependencies
 	rm -f gclock/dependencies
 	rm -f glaunch/dependencies
 	rm -f ghebtn/dependencies
@@ -56,6 +61,7 @@ distclean:
 touchdepend:
 	touch gbball/dependencies
 	touch gbrowser/dependencies
+	touch gchat/dependencies
 	touch gclock/dependencies
 	touch glaunch/dependencies
 	touch ghebtn/dependencies
