--- a/Mona/apps/baygui/Makefile
+++ b/Mona/apps/baygui/Makefile
@@ -6,6 +6,7 @@ all:
 	@cd glaunch && $(MAKE) $@
 	@cd ghebtn && $(MAKE) $@
 	@cd gnoiz2bg && $(MAKE) $@
+	@cd gnullpo && $(MAKE) $@
 	@cd grunner && $(MAKE) $@
 	@cd guitest1 && $(MAKE) $@
 	@cd gversion && $(MAKE) $@
@@ -18,6 +19,7 @@ install:
 	@cd glaunch && $(MAKE) $@
 	@cd ghebtn && $(MAKE) $@
 	@cd gnoiz2bg && $(MAKE) $@
+	@cd gnullpo && $(MAKE) $@
 	@cd grunner && $(MAKE) $@
 	@cd guitest1 && $(MAKE) $@
 	@cd gversion && $(MAKE) $@
@@ -30,6 +32,7 @@ clean: touchdepend
 	@cd glaunch && $(MAKE) $@
 	@cd ghebtn && $(MAKE) $@
 	@cd gnoiz2bg && $(MAKE) $@
+	@cd gnullpo && $(MAKE) $@
 	@cd grunner && $(MAKE) $@
 	@cd guitest1 && $(MAKE) $@
 	@cd gversion && $(MAKE) $@
@@ -42,6 +45,7 @@ depend: touchdepend
 	@cd glaunch && $(MAKE) $@
 	@cd ghebtn && $(MAKE) $@
 	@cd gnoiz2bg && $(MAKE) $@
+	@cd gnullpo && $(MAKE) $@
 	@cd grunner && $(MAKE) $@
 	@cd guitest1 && $(MAKE) $@
 	@cd gversion && $(MAKE) $@
@@ -54,6 +58,7 @@ distclean:
 	rm -f glaunch/dependencies
 	rm -f ghebtn/dependencies
 	rm -f gnoiz2bg/dependencies
+	rm -f gnullpo/dependencies
 	rm -f grunner/dependencies
 	rm -f guitest1/dependencies
 	rm -f gversion/dependencies
@@ -66,6 +71,7 @@ touchdepend:
 	touch glaunch/dependencies
 	touch ghebtn/dependencies
 	touch gnoiz2bg/dependencies
+	touch gnullpo/dependencies
 	touch grunner/dependencies
 	touch guitest1/dependencies
 	touch gversion/dependencies
