--- a/Mona/apps/baygui/ghebtn/Makefile
+++ b/Mona/apps/baygui/ghebtn/Makefile
@@ -1,7 +1,8 @@
 TARGET  = GHEBTN
-SOURCES = ghebtn.cpp 
+SOURCES = ghebtn.cpp
 INSTDIR = $(BINDIR)/root/APPS/GHEBTN.APP
 INSTFILES = 0.BM5 1.BM5 2.BM5 3.BM5 4.BM5 5.BM5 6.BM5 7.BM5 8.BM5 9.BM5 HENORMAL.BM5 HEPUSHED.BM5
+CLEANFILES = $(INSTFILES)
 
 $(TARGET).EX5: $(INSTFILES)
 
