clean *.bm5 files at make clean

--- a/Mona/apps/baygui/gnullpo/Makefile
+++ b/Mona/apps/baygui/gnullpo/Makefile
@@ -2,6 +2,7 @@ TARGET  = GNULLPO
 SOURCES = gnullpo.cpp 
 INSTDIR = $(BINDIR)/root/APPS/GNULLPO.APP
 INSTFILES = HENORMAL.BM5 HEPUSHED.BM5
+CLEANFILES = $(INSTFILES)
 
 $(TARGET).EX5: $(INSTFILES)
 
