--- a/Mona/apps/baygui/Makefile
+++ b/Mona/apps/baygui/Makefile
@@ -3,6 +3,7 @@ all:
 	@cd gbrowser && $(MAKE) $@
 	@cd gchat && $(MAKE) $@
 	@cd gclock && $(MAKE) $@
+	@cd gfire && $(MAKE) $@
 	@cd glaunch && $(MAKE) $@
 	@cd ghebtn && $(MAKE) $@
 	@cd gnoiz2bg && $(MAKE) $@
@@ -17,6 +18,7 @@ install:
 	@cd gbrowser && $(MAKE) $@
 	@cd gchat && $(MAKE) $@
 	@cd gclock && $(MAKE) $@
+	@cd gfire && $(MAKE) $@
 	@cd glaunch && $(MAKE) $@
 	@cd ghebtn && $(MAKE) $@
 	@cd gnoiz2bg && $(MAKE) $@
@@ -31,6 +33,7 @@ clean: touchdepend
 	@cd gbrowser && $(MAKE) $@
 	@cd gchat && $(MAKE) $@
 	@cd gclock && $(MAKE) $@
+	@cd gfire && $(MAKE) $@
 	@cd glaunch && $(MAKE) $@
 	@cd ghebtn && $(MAKE) $@
 	@cd gnoiz2bg && $(MAKE) $@
@@ -45,6 +48,7 @@ depend: touchdepend
 	@cd gbrowser && $(MAKE) $@
 	@cd gchat && $(MAKE) $@
 	@cd gclock && $(MAKE) $@
+	@cd gfire && $(MAKE) $@
 	@cd glaunch && $(MAKE) $@
 	@cd ghebtn && $(MAKE) $@
 	@cd gnoiz2bg && $(MAKE) $@
@@ -59,6 +63,7 @@ distclean:
 	rm -f gbrowser/dependencies
 	rm -f gchat/dependencies
 	rm -f gclock/dependencies
+	rm -f gfire/dependencies
 	rm -f glaunch/dependencies
 	rm -f ghebtn/dependencies
 	rm -f gnoiz2bg/dependencies
@@ -73,6 +78,7 @@ touchdepend:
 	touch gbrowser/dependencies
 	touch gchat/dependencies
 	touch gclock/dependencies
+	touch gfire/dependencies
 	touch glaunch/dependencies
 	touch ghebtn/dependencies
 	touch gnoiz2bg/dependencies
