ImeManager many fixed

--- a/Mona/src/lib/baygui/Makefile
+++ b/Mona/src/lib/baygui/Makefile
@@ -9,9 +9,9 @@ TARGET      += $(LIB_IMPORT) $(LIB_IMPORT) $(LIB_DYNAMIC) $(LIB_DYNAMIC2)
 endif
 
 SOURCES = main.cpp Bitmap.cpp Button.cpp Control.cpp Container.cpp Event.cpp Font.cpp \
-FontManager.cpp Graphics.cpp Icon.cpp Image.cpp ImeManager.cpp KeyEvent.cpp Label.cpp \
-LinkedItem.cpp LinkedList.cpp ListBox.cpp MouseEvent.cpp Object.cpp Rect.cpp String.cpp \
-TextField.cpp Window.cpp
+FontManager.cpp Graphics.cpp Icon.cpp Image.cpp ImeEvent.cpp ImeManager.cpp KeyEvent.cpp \
+Label.cpp LinkedItem.cpp LinkedList.cpp ListBox.cpp MouseEvent.cpp Object.cpp Rect.cpp \
+String.cpp TextField.cpp Window.cpp
 
 MONADIR = ../../..
 include $(MONADIR)/env/monapi.inc
