--- a/Mona/samples/non-gui/Makefile
+++ b/Mona/samples/non-gui/Makefile
@@ -1,29 +1,29 @@
 all:
 	@cd hello && $(MAKE) $@
 #	@cd kanji && $(MAKE) $@
-	@cd yamami && $(MAKE) $@
+#	@cd yamami && $(MAKE) $@
 
 install:
 	@cd hello && $(MAKE) $@
 #	@cd kanji && $(MAKE) $@
-	@cd yamami && $(MAKE) $@
+#	@cd yamami && $(MAKE) $@
 
 clean: touchdepend
 	@cd hello && $(MAKE) $@
 #	@cd kanji && $(MAKE) $@
-	@cd yamami && $(MAKE) $@
+#	@cd yamami && $(MAKE) $@
 
 depend: touchdepend
 	@cd hello && $(MAKE) $@
 #	@cd kanji && $(MAKE) $@
-	@cd yamami && $(MAKE) $@
+#	@cd yamami && $(MAKE) $@
 
 distclean:
 	rm -f hello/dependencies
 #	rm -f kanji/dependencies
-	rm -f yamami/dependencies
+#	rm -f yamami/dependencies
 
 touchdepend:
 	touch hello/dependencies
 #	touch kanji/dependencies
-	touch yamami/dependencies
+#	touch yamami/dependencies
