--- a/Mona/src/lib/baygui/Makefile
+++ b/Mona/src/lib/baygui/Makefile
@@ -8,7 +8,7 @@ LIB_DYNAMIC2 = BAYGUI.DL5
 TARGET      += $(LIB_IMPORT) $(LIB_IMPORT) $(LIB_DYNAMIC) $(LIB_DYNAMIC2)
 endif
 
-SOURCES = main.cpp Bitmap.cpp Button.cpp Control.cpp Container.cpp Event.cpp Font.cpp \
+SOURCES = Bitmap.cpp Button.cpp Control.cpp Container.cpp Event.cpp Font.cpp \
 FontManager.cpp Graphics.cpp Icon.cpp Image.cpp ImeManager.cpp KeyEvent.cpp \
 Label.cpp LinkedItem.cpp LinkedList.cpp ListBox.cpp MouseEvent.cpp Object.cpp Rect.cpp \
 String.cpp TextField.cpp Window.cpp
