atapic cd read and iso9660 OK

--- a/Mona/apps/non-gui/ata/Makefile
+++ b/Mona/apps/non-gui/ata/Makefile
@@ -1,8 +1,12 @@
-TARGET  = HDDANGER
+TARGET  = CDDANGER
 SOURCES = main.cpp IDEDriver.cpp ISO9660.cpp
 INSTDIR = $(BINDIR)/root/APPS
 
 MONADIR = ../../..
+
+ADDLINK    = -lmonalibc
+ADDLINKDEP = $(MONADIR)/lib/libmonalibc.a
+
 ifneq ($(BUILD_TARGET),ELF)
 include $(MONADIR)/env/monapi-ex2.inc
 else
