--- a/Mona/src/servers/imesvr/Makefile
+++ b/Mona/src/servers/imesvr/Makefile
@@ -1,8 +1,8 @@
 TARGET  = IMESVR
 SOURCES = main.cpp ImeServer.cpp
 INSTDIR = $(BINDIR)/root/SERVERS
-INSTFILES  = 
-CLEANFILES = BASICDIC.TX5
+#INSTFILES  = 
+#CLEANFILES = BASICDIC.TX5
 
 $(TARGET).EX5: $(CLEANFILES)
 
@@ -18,9 +18,9 @@ CXXFLAGS += -DDEBUG
 BASICDIC.TX5: BASICDIC.TXT
 	$(MONADIR)/bin/bim2bin in:$< out:$@ -osacmp -tek5 BS:0 eprm:z0
 
-install-ime:
-	$(INSTALL) BASICDIC.TX5 $(MONADIR)/bin/root
+#install-ime:
+#	$(INSTALL) BASICDIC.TX5 $(MONADIR)/bin/root
 
-install: install-ime
+#install: install-ime
 
 include dependencies
