--- a/Mona/src/kernel/Makefile
+++ b/Mona/src/kernel/Makefile
@@ -3,9 +3,12 @@ MONADIR         = ../..
 include $(MONADIR)/env/dirnames.inc
 include $(MONADIR)/env/Makefile.inc
 
-KERNEL_ADDR  = 0x0400
-LFLAGS       = -n -Ttext 0x1400 -static
-CXXFLAGS    += -DOSTYPE="\"$(OSTYPE)\""
+REL_KERNEL_ADDR  = 0x0400
+KERNEL_BASE_ADDR = 0x1000
+MONA_HEADER_SIZE = 0x10
+KERNEL_START_ADDR= 0x1410 # ($(REL_KERNEL_ADDR) + $(KERNEL_BASE_ADDR) + $(MONA_HEADER_SIZE))
+LFLAGS       = -n -Ttext $(KERNEL_START_ADDR) -static
+CXXFLAGS    += -DOSTYPE="\"$(OSTYPE)\"" -DREL_KERNEL_ADDR=$(REL_KERNEL_ADDR) -DKERNEL_BASE_ADDR=$(KERNEL_BASE_ADDR)
 TOOLSDIR     = $(MONADIR)/tools
 INCLUDE      = -I$(INCDIR) -I$(TOOLSDIR)
 KERNEL_IMG   = KERNEL.IMG
@@ -49,7 +52,9 @@ OBJECTS = $(SOURCES:.cpp=.o)
 all : $(BOOT1) $(KERNEL_IMG)
 
 $(KERNEL_IMG) : $(BOOT2) $(KERNEL)
-	cat $(BOOT2) $(KERNEL) > $@
+	$(BINDIR)/getFileSize.exe $(KERNEL) $(KERNEL) head.txt
+	cat $(BOOT2) head.txt $(KERNEL) > $@
+	rm -f head.txt
 
 $(KERNEL) : $(OBJECTS) $(DRVROBJ) mode12h.o ihandler.o core.o
 	$(LD) --Map kernel.map $(LFLAGS) -o$@ $(OBJECTS) mode12h.o ihandler.o core.o
@@ -70,7 +75,7 @@ $(BOOT1) : firstboot.asm
 	$(NASM) firstboot.asm -o $@ -l $(LISTDIR)/first.list
 
 $(BOOT2) : secondboot.asm
-	$(NASM) -DKERNEL_ADDR=$(KERNEL_ADDR) secondboot.asm -o $@ -l $(LISTDIR)/second.list
+	$(NASM) -DREL_KERNEL_ADDR=$(REL_KERNEL_ADDR) -DMONA_HEADER_SIZE=$(MONA_HEADER_SIZE) secondboot.asm -o $@ -l $(LISTDIR)/second.list
 
 mode12h.o : mode12h.asm
 	$(NASM) $(NFLAGS) mode12h.asm  -o $@ -l $(LISTDIR)/mode12h.list
