*** empty log message ***

--- a/Mona/bin/Makefile
+++ b/Mona/bin/Makefile
@@ -6,9 +6,9 @@ APP_FILES  = `cd root; ls APPS/*.E* APPS/*.MSH`
 LIB_FILES  = `cd root; ls LIBS/*.*`
 
 all:
-	./getFileSize.exe root/SERVERS/FILE.BIN FILE.BIN file.head
-	./getFileSize.exe root/SERVERS/PROCESS.BIN PROCESS.BIN process.head
-	./getFileSize.exe root/SERVERS/MONITOR.BIN MONITOR.BIN monitor.head
+	./getFileSize$(EXEEXT) root/SERVERS/FILE.BIN FILE.BIN file.head
+	./getFileSize$(EXEEXT) root/SERVERS/PROCESS.BIN PROCESS.BIN process.head
+	./getFileSize$(EXEEXT) root/SERVERS/MONITOR.BIN MONITOR.BIN monitor.head
 	mv root/KERNEL.IMG root/tmp
 	cat ./root/tmp file.head root/SERVERS/FILE.BIN process.head root/SERVERS/PROCESS.BIN monitor.head root/SERVERS/MONITOR.BIN terminater.head > root/KERNEL.IMG
 	rm -f file.head process.head monitor.head root/tmp
