--- a/Mona/bin/root/MONITOR.CFG
+++ b/Mona/bin/root/MONITOR.CFG
@@ -5,6 +5,6 @@ SERVER=/SERVERS/PE.BN2
 # SERVER=/SERVERS/MONES.EX2
 SERVER=/SERVERS/KEYBDMNG.EX2
 SERVER=/SERVERS/MOUSE.EX2
-SERVER=/SERVERS/IMESVR.EX5
+# SERVER=/SERVERS/IMESVR.EX5
 SERVER=/SERVERS/OLDSHELL.EX2
 # SERVER=/SERVERS/BAYGUI.EX5
