--- a/Mona/apps/baygui/Makefile
+++ b/Mona/apps/baygui/Makefile
@@ -1,89 +1,35 @@
 all:
 	@cd gbball && $(MAKE) $@
-	@cd gbrowser && $(MAKE) $@
-	@cd gchat && $(MAKE) $@
 	@cd gclock && $(MAKE) $@
-	@cd gfire && $(MAKE) $@
 	@cd glaunch && $(MAKE) $@
-	@cd ghebtn && $(MAKE) $@
-	@cd gnoiz2bg && $(MAKE) $@
-	@cd gnullpo && $(MAKE) $@
-	@cd grunner && $(MAKE) $@
-	@cd guitest1 && $(MAKE) $@
-	@cd gversion && $(MAKE) $@
-	@cd mblupin && $(MAKE) $@
+	@cd mtorz && $(MAKE) $@
 
 install:
 	@cd gbball && $(MAKE) $@
-	@cd gbrowser && $(MAKE) $@
-	@cd gchat && $(MAKE) $@
 	@cd gclock && $(MAKE) $@
-	@cd gfire && $(MAKE) $@
 	@cd glaunch && $(MAKE) $@
-	@cd ghebtn && $(MAKE) $@
-	@cd gnoiz2bg && $(MAKE) $@
-	@cd gnullpo && $(MAKE) $@
-	@cd grunner && $(MAKE) $@
-	@cd guitest1 && $(MAKE) $@
-	@cd gversion && $(MAKE) $@
-	@cd mblupin && $(MAKE) $@
+	@cd mtorz && $(MAKE) $@
 
 clean: touchdepend
 	@cd gbball && $(MAKE) $@
-	@cd gbrowser && $(MAKE) $@
-	@cd gchat && $(MAKE) $@
 	@cd gclock && $(MAKE) $@
-	@cd gfire && $(MAKE) $@
 	@cd glaunch && $(MAKE) $@
-	@cd ghebtn && $(MAKE) $@
-	@cd gnoiz2bg && $(MAKE) $@
-	@cd gnullpo && $(MAKE) $@
-	@cd grunner && $(MAKE) $@
-	@cd guitest1 && $(MAKE) $@
-	@cd gversion && $(MAKE) $@
-	@cd mblupin && $(MAKE) $@
+	@cd mtorz && $(MAKE) $@
 
 depend: touchdepend
 	@cd gbball && $(MAKE) $@
-	@cd gbrowser && $(MAKE) $@
-	@cd gchat && $(MAKE) $@
 	@cd gclock && $(MAKE) $@
-	@cd gfire && $(MAKE) $@
 	@cd glaunch && $(MAKE) $@
-	@cd ghebtn && $(MAKE) $@
-	@cd gnoiz2bg && $(MAKE) $@
-	@cd gnullpo && $(MAKE) $@
-	@cd grunner && $(MAKE) $@
-	@cd guitest1 && $(MAKE) $@
-	@cd gversion && $(MAKE) $@
-	@cd mblupin && $(MAKE) $@
+	@cd mtorz && $(MAKE) $@
 
 distclean:
 	rm -f gbball/dependencies
-	rm -f gbrowser/dependencies
-	rm -f gchat/dependencies
 	rm -f gclock/dependencies
-	rm -f gfire/dependencies
 	rm -f glaunch/dependencies
-	rm -f ghebtn/dependencies
-	rm -f gnoiz2bg/dependencies
-	rm -f gnullpo/dependencies
-	rm -f grunner/dependencies
-	rm -f guitest1/dependencies
-	rm -f gversion/dependencies
-	rm -f mblupin/dependencies
+	rm -f mtorz/dependencies
 
 touchdepend:
-	touch gbball/dependencies
-	touch gbrowser/dependencies
-	touch gchat/dependencies
-	touch gclock/dependencies
-	touch gfire/dependencies
-	touch glaunch/dependencies
-	touch ghebtn/dependencies
-	touch gnoiz2bg/dependencies
-	touch gnullpo/dependencies
-	touch grunner/dependencies
-	touch guitest1/dependencies
-	touch gversion/dependencies
-	touch mblupin/dependencies	
+	touch -f gbball/dependencies
+	touch -f gclock/dependencies
+	touch -f glaunch/dependencies
+	touch -f mtorz/dependencies
