--- a/Mona/bin/root/BAYGUI.INI
+++ b/Mona/bin/root/BAYGUI.INI
@@ -1,5 +1,6 @@
 [General]
-Run=/APPS/MONAFILE.APP/MONAFILE.EL2,/APPS/MTORZ.EX5,/APPS/GBBALL.EX5,/APPS/GCLOCK.EX5
+rem Run=/APPS/MTORZ.EX5,/APPS/GBBALL.EX5,/APPS/GCLOCK.EX5
+Run=/APPS/GLAUNCH.APP/GLAUNCH.EL2
 
 [Wallpaper]
 Source=/MONAWALL.BM5
