--- a/Mona/apps/baygui/gnullpo/Makefile
+++ b/Mona/apps/baygui/gnullpo/Makefile
@@ -4,18 +4,18 @@ INSTDIR = $(BINDIR)/root/APPS/GNULLPO.APP
 INSTFILES = NULLPO.BM5 GAT.BM5
 CLEANFILES = $(INSTFILES)
 
-$(TARGET).EX5: $(INSTFILES)
+$(TARGET).EXE: $(INSTFILES)
 
 MONADIR    = ../../..
-#ifneq ($(BUILD_TARGET),ELF)
-#ADDLINK    = -lbaygui-imp
-#ADDLINKDEP = $(MONADIR)/lib/libbaygui-imp.a
-#include $(MONADIR)/env/monapi-ex2.inc
-#else
+ifneq ($(BUILD_TARGET),ELF)
+ADDLINK    = -lbaygui-imp
+ADDLINKDEP = $(MONADIR)/lib/libbaygui-imp.a
+include $(MONADIR)/env/monapi-ex5.inc
+else
 ADDLINK    = -lbaygui
 ADDLINKDEP = $(MONADIR)/lib/libbaygui.a
-include $(MONADIR)/env/monapi-el2.inc
-#endif
+include $(MONADIR)/env/monapi-el5.inc
+endif
 
 CXXFLAGS += -DDEBUG
 
