--- a/Mona/bin/root/BAYGUI.INI
+++ b/Mona/bin/root/BAYGUI.INI
@@ -1,6 +1,6 @@
 [General]
-rem Run=/APPS/MTORZ.EX5,/APPS/GBBALL.EX5,/APPS/GCLOCK.EX5
-Run=/APPS/GLAUNCH.APP/GLAUNCH.EL2
+rem Run=/APPS/GNULLPO.APP/GNULLPO.EX5,/APPS/GVERSION.EX5
+Run=/APPS/GLAUNCH.APP/GLAUNCH.EL5
 
 [Wallpaper]
 Source=/MONAWALL.BM5
