--- a/Mona/src/servers/file/Makefile
+++ b/Mona/src/servers/file/Makefile
@@ -1,5 +1,5 @@
 TARGET  = FILE
-SOURCES = main.cpp file.cpp bzip2.cpp dtk5s.cpp IDEDriver.cpp ISO9660.cpp
+SOURCES = main.cpp file.cpp bzip2.cpp dtk5s.cpp IDEDriver.cpp ISO9660.cpp FDCDriver.cpp
 INSTDIR = $(BINDIR)/root/SERVERS
 
 MONADIR    = ../../..
