changed launcher name

--- a/Mona/bin/root/BAYGUI.INI
+++ b/Mona/bin/root/BAYGUI.INI
@@ -1,6 +1,6 @@
 [General]
 rem Run=/APPS/GNULLPO.APP/GNULLPO.EX5,/APPS/GVERSION.EX5
-Run=/APPS/GLAUNCH.APP/GLAUNCH.EL5
+Run=/APPS/GLAUNCH.EX5
 
 [Wallpaper]
 Source=/MONAWALL.BM5
