changed BayGUI base

--- a/Mona/apps/baygui/glaunch/Makefile
+++ b/Mona/apps/baygui/glaunch/Makefile
@@ -1,14 +1,5 @@
 TARGET  = GLAUNCH
-
-SOURCES = \
-	BitmapViewer.cpp \
-	FileManager.cpp \
-	Icons.cpp \
-	IconData.cpp \
-	ShortCut.cpp \
-	TextViewer.cpp \
-	WindowManager.cpp
-
+SOURCES = glaunch.cpp
 INSTDIR = $(BINDIR)/root/APPS
 
 MONADIR    = ../../..
