--- a/Mona/apps/baygui/gnullpo/Makefile
+++ b/Mona/apps/baygui/gnullpo/Makefile
@@ -4,7 +4,7 @@ INSTDIR = $(BINDIR)/root/APPS/GNULLPO.APP
 INSTFILES = NULLPO.BM5 GAT.BM5
 CLEANFILES = $(INSTFILES)
 
-$(TARGET).EXE: $(INSTFILES)
+$(TARGET).EX5: $(INSTFILES)
 
 MONADIR    = ../../..
 ifneq ($(BUILD_TARGET),ELF)
