--- a/Mona/apps/baygui/grunner/Makefile
+++ b/Mona/apps/baygui/grunner/Makefile
@@ -1,5 +1,5 @@
-TARGET  = GSHELL
-SOURCES = gshell.cpp
+TARGET  = GRUNNER
+SOURCES = grunner.cpp
 INSTDIR = $(BINDIR)/root/APPS
 
 MONADIR    = ../../..
