--- a/Mona/src/lib/baygui/Makefile
+++ b/Mona/src/lib/baygui/Makefile
@@ -4,42 +4,29 @@ TARGET       = $(LIB_STATIC)
 ifneq ($(BUILD_TARGET),ELF)
 LIB_IMPORT   = $(LIBDIR)/libbaygui-imp.a
 LIB_DYNAMIC  = BAYGUI.DLL
-LIB_DYNAMIC5 = BAYGUI.DL5
-TARGET      += $(LIB_IMPORT) $(LIB_IMPORT) $(LIB_DYNAMIC) $(LIB_DYNAMIC5)
+LIB_DYNAMIC2 = BAYGUI.DL5
+TARGET      += $(LIB_IMPORT) $(LIB_IMPORT) $(LIB_DYNAMIC) $(LIB_DYNAMIC2)
 endif
 
-#SOURCES = \
-#	./stub.cpp \
-#	Console.cpp \
-#	String.cpp \
-#	Bitmap.cpp \
-#	Font.cpp \
-#	FontMetrics.cpp \
-#	Graphics.cpp \
-#	Rectangle.cpp \
-#	Application.cpp \
-#	Button.cpp \
-#	Control.cpp \
-#	ControlPaint.cpp \
-#	Cursor.cpp \
-#	Window.cpp \
-#	Label.cpp \
-#	Timer.cpp \
-#	Encoding.cpp \
-#	PString.cpp
-
 SOURCES = \
-	./stub.cpp \
-	Application.cpp \
-	Bitmap.cpp \
+	main.cpp \
 	Button.cpp \
 	Control.cpp \
+	Container.cpp \
+	Event.cpp \
 	FontMetrics.cpp \
 	Graphics.cpp \
+	Image.cpp \
+	KeyEvent.cpp \
 	Label.cpp \
+	LinkedItem.cpp \
+	LinkedList.cpp \
+	ListBox.cpp \
+	MouseEvent.cpp \
+	Object.cpp \
 	Rect.cpp \
 	String.cpp \
-	Timer.cpp \
+	TextField.cpp \
 	Window.cpp
 
 MONADIR = ../../..
@@ -62,7 +49,8 @@ $(LIB_DYNAMIC): $(OBJECTS)
 	$(LD) --export-all-symbols --out-implib $(LIB_IMPORT) -o $@ $(OBJECTS) -L$(MONADIR)/lib -lmonapi-imp
 	$(STRIP) $@
 
-$(LIB_DYNAMIC5): $(LIB_DYNAMIC)
+$(LIB_DYNAMIC2): $(LIB_DYNAMIC)
+#	bzip2 -c $(LIB_DYNAMIC) > $@
 	$(MONADIR)/bin/bim2bin in:$(LIB_DYNAMIC) out:$@ -osacmp -tek5 BS:0 eprm:z0
 endif
 
@@ -84,7 +72,7 @@ depend:
 install: $(TARGET)
 ifneq ($(BUILD_TARGET),ELF)
 	mkdir -p $(MONADIR)/bin/root/LIBS
-	$(INSTALL) $(LIB_DYNAMIC5) $(MONADIR)/bin/root/LIBS
+	$(INSTALL) $(LIB_DYNAMIC2) $(MONADIR)/bin/root/LIBS
 endif
 
 include dependencies
