--- a/Mona/apps/baygui/Makefile
+++ b/Mona/apps/baygui/Makefile
@@ -1,59 +1,83 @@
 all:
 	@cd gbball && $(MAKE) $@
+	@cd gbrowser && $(MAKE) $@
+	@cd gchat && $(MAKE) $@
 	@cd gclock && $(MAKE) $@
-	@cd ghebtn && $(MAKE) $@
 	@cd glaunch && $(MAKE) $@
+	@cd ghebtn && $(MAKE) $@
+	@cd gnoiz2bg && $(MAKE) $@
 	@cd gnullpo && $(MAKE) $@
 	@cd grunner && $(MAKE) $@
+	@cd guitest1 && $(MAKE) $@
 	@cd gversion && $(MAKE) $@
-	@cd mtorz && $(MAKE) $@
+	@cd mblupin && $(MAKE) $@
 
 install:
 	@cd gbball && $(MAKE) $@
+	@cd gbrowser && $(MAKE) $@
+	@cd gchat && $(MAKE) $@
 	@cd gclock && $(MAKE) $@
-	@cd ghebtn && $(MAKE) $@
 	@cd glaunch && $(MAKE) $@
+	@cd ghebtn && $(MAKE) $@
+	@cd gnoiz2bg && $(MAKE) $@
 	@cd gnullpo && $(MAKE) $@
 	@cd grunner && $(MAKE) $@
+	@cd guitest1 && $(MAKE) $@
 	@cd gversion && $(MAKE) $@
-	@cd mtorz && $(MAKE) $@
+	@cd mblupin && $(MAKE) $@
 
 clean: touchdepend
 	@cd gbball && $(MAKE) $@
+	@cd gbrowser && $(MAKE) $@
+	@cd gchat && $(MAKE) $@
 	@cd gclock && $(MAKE) $@
-	@cd ghebtn && $(MAKE) $@
 	@cd glaunch && $(MAKE) $@
+	@cd ghebtn && $(MAKE) $@
+	@cd gnoiz2bg && $(MAKE) $@
 	@cd gnullpo && $(MAKE) $@
 	@cd grunner && $(MAKE) $@
+	@cd guitest1 && $(MAKE) $@
 	@cd gversion && $(MAKE) $@
-	@cd mtorz && $(MAKE) $@
+	@cd mblupin && $(MAKE) $@
 
 depend: touchdepend
 	@cd gbball && $(MAKE) $@
+	@cd gbrowser && $(MAKE) $@
+	@cd gchat && $(MAKE) $@
 	@cd gclock && $(MAKE) $@
-	@cd ghebtn && $(MAKE) $@
 	@cd glaunch && $(MAKE) $@
+	@cd ghebtn && $(MAKE) $@
+	@cd gnoiz2bg && $(MAKE) $@
 	@cd gnullpo && $(MAKE) $@
 	@cd grunner && $(MAKE) $@
+	@cd guitest1 && $(MAKE) $@
 	@cd gversion && $(MAKE) $@
-	@cd mtorz && $(MAKE) $@
+	@cd mblupin && $(MAKE) $@
 
 distclean:
 	rm -f gbball/dependencies
+	rm -f gbrowser/dependencies
+	rm -f gchat/dependencies
 	rm -f gclock/dependencies
-	rm -f ghebtn/dependencies
 	rm -f glaunch/dependencies
+	rm -f ghebtn/dependencies
+	rm -f gnoiz2bg/dependencies
 	rm -f gnullpo/dependencies
 	rm -f grunner/dependencies
+	rm -f guitest1/dependencies
 	rm -f gversion/dependencies
-	rm -f mtorz/dependencies
+	rm -f mblupin/dependencies
 
 touchdepend:
-	touch -f gbball/dependencies
-	touch -f gclock/dependencies
-	touch -f ghebtn/dependencies
-	touch -f glaunch/dependencies
-	touch -f gnullpo/dependencies
-	touch -f grunner/dependencies
-	touch -f gversion/dependencies
-	touch -f mtorz/dependencies
+	touch gbball/dependencies
+	touch gbrowser/dependencies
+	touch gchat/dependencies
+	touch gclock/dependencies
+	touch glaunch/dependencies
+	touch ghebtn/dependencies
+	touch gnoiz2bg/dependencies
+	touch gnullpo/dependencies
+	touch grunner/dependencies
+	touch guitest1/dependencies
+	touch gversion/dependencies
+	touch mblupin/dependencies	
